--- a/SubtitleParse/SubtitleParse.csproj
+++ b/SubtitleParse/SubtitleParse.csproj
@@ -39,6 +39,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="AssParse.cs" />
+        <Compile Include="AutoParse.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="SrtParse.cs" />
         <Compile Include="SubtitlesParse.cs" />
